cluster/gatekeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-gatekeeper
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: keycloak-gatekeeper
